# Mymem

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GETTING_STARTED.md  PLAN.md  PROJECT_CONTEXT.md  README.md  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  skills-lock.json
design-system/mymem/: MASTER.md
docs/: CODEMAP.md  TESTING.md  learnings.md  plan_duplicate_ingestion.md  plan_pages_caching.md  plan_web_search_related_links.md  security_audit.md
docs/ADR/: 001-rag-chunking-strategy.md  002-extraction-eval-strategy.md  003-wiki-storage-format.md  004-external-integrations-strategy.md  005-agent-decomposition-strategy.md  006-extraction-quality-improvements.md  007-graph-entity-mapping.md  008-graph-implementation-decisions.md  009-social-readers-implementation-decisions.md  010-free-tier-provider-routing.md  011-compounding-ingest-and-provenance.md  012-quota-aware-routing.md  013-stable-page-identity.md  014-page-identity-implementation-decisions.md  015-compounding-ingest-implementation-decisions.md  016-okf-integration.md  017-agent-knowledge-interop.md  018-content-safety.md
docs/PRD/: agent-decomposition.md  agent-knowledge-interop.md  compounding-ingest.md  extraction-eval.md  extraction-quality-improvements.md  graph-entity-mapping.md  notebooklm-integrations.md  okf-integration.md  rag-chunking.md
docs/architecture/: agent-decomposition.md  agent-knowledge-interop.md  compounding-ingest.md  extraction-eval.md  extraction-quality-improvements.md  graph-entity-mapping.md  okf-integration.md  rag-and-embeddings.md  rag-improvements.md
docs/features/: V1-0001.md  V1-0002.md
docs/research/: agent-decomposition.md  agent-knowledge-interop.md  extraction-eval.md  extraction-quality-improvements.md  graph-entity-mapping.md  knowledge-moat-and-free-tier-routing.md  md-vs-html-wiki-storage.md  notebooklm-obsidian-notion-integrations.md  open-knowledge-format.md  rag-chunking.md  tracing-and-orchestration.md  wiki-as-agent-memory.md
docs/specs/: README.md  _template.md  product_overview.md
docs/testing/: mcp-interop-connected.md  mcp-interop-e2e.md  mcp-interop-tests.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
mymem/: __init__.py  __main__.py  cli.py  config.py  pyproject.toml
mymem/evals/: __init__.py  _base.py  chunking.py  confidence.py  decision_agreement.py  extraction_consensus.py  hope.py  ingest_quality.py  metrics.py  ragas_lite.py  report.py  retrieval.py  runner.py  store.py
mymem/graph/: __init__.py  backfill.py  extractor.py  gaps.py  resolver.py  store.py  ui_edges.py
mymem/interop/: __init__.py
mymem/interop/mcp/: __init__.py  auth.py  context.py  middleware.py  payloads.py  resources.py  server.py  tools.py
mymem/knowledge/: __init__.py  claim_index.py  claims.py  render.py  retrieval.py
mymem/knowledge/okf/: __init__.py  _links.py  _map.py  _spec.py  conformance.py  exporter.py  importer.py
mymem/observability/: health.py  ingest_analytics.py  logger.py  tracer.py
mymem/pipeline/: __init__.py  compounding.py  ingest.py  ingest_background.py  ingest_claims.py  ingest_extract.py  ingest_rag.py  introspect.py  lint.py  llm.py  query.py  readers.py  reconcile.py  router.py  search.py  social_readers.py  splitter.py
mymem/pipeline/router/: __init__.py  _chain.py  _cost.py  _credentials.py  _registry.py  _router.py  _types.py  _utils.py
mymem/rag/: __init__.py  embedder.py  ingest.py  pdf_parser.py  store.py  wiki_chunker.py
mymem/security/: content_safety.py  denylist.py  moderation.py  pii.py  sanitize.py  scanner.py  validate.py
mymem/web/: __init__.py  app.py
mymem/web/routes/: __init__.py  api.py  logs.py  pages.py
mymem/web/static/: app.js  style.css
mymem/web/templates/: base.html  dashboard.html  graph.html  ingest.html  introspect.html  search.html  wiki_page.html
mymem/wiki/: __init__.py  identity.py  index.py  log.py  page.py  tags.py  types.py
scripts/: demo_content_safety.py  e2e_mcp.py  smoke_mcp_http.py
tests/: test_claim_index.py  test_claim_retrieval.py  test_claims.py  test_claims_render.py  test_compounding.py  test_content_safety.py  test_d20_gaps.py  test_decision_agreement.py  test_evals.py  test_extraction_consensus.py  test_graph_backfill.py  test_graph_cli.py  test_graph_extractor.py  test_graph_gaps.py  test_graph_resolver.py  test_graph_store.py  test_graph_ui_edges.py  test_identity.py  test_ingest.py  test_ingest_analytics.py  test_ingest_graph.py  test_ingest_map_reduce.py  test_interop_mcp.py  test_introspect.py  test_lint.py  test_observability.py  test_okf_core.py  test_okf_export.py  test_okf_import.py  test_ollama.py  test_propositions.py  test_query.py  test_rag_ingest.py  test_rag_parser.py  test_rag_store.py  test_readers.py  test_reconcile.py  test_router.py  test_search.py  test_security.py  (+5 more)
(+31 files in other folders)
