[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mymem"
version = "0.1.0"
description = "Personal LLM-powered knowledge management pipeline"
requires-python = ">=3.11"
dependencies = [
    # Core
    "typer==0.24.1",
    "rich==14.3.3",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",

    # LLM providers
    "anthropic>=0.54.0",       # 0.54+ is compatible with httpx 0.28+
    "ollama==0.4.8",           # native Ollama async client
    "openai>=1.50.0",          # OpenAI provider

    # Storage
    "sqlite-vec==0.1.9",       # vector search in SQLite

    # Graph entity layer (ADR-007)
    "rapidfuzz==3.14.5",       # alias/fuzzy name matching for entity resolution

    # Ingestion
    "httpx>=0.28.0",           # URL fetching (fallback)
    "trafilatura>=2.0.0",      # primary article/URL extraction
    "pypdf>=6.12.2",           # PDF text extraction (6.9.2 had 5 memory-exhaustion CVEs)
    "beautifulsoup4==4.14.3",  # HTML → text fallback

    # RAG chunking
    "langchain-text-splitters>=0.3.0",  # MarkdownHeaderTextSplitter + RecursiveCharacterTextSplitter

    # Search
    "rank-bm25==0.2.2",        # BM25 fallback when embeddings not available
    "ddgs>=9.0",               # DuckDuckGo web search for related links
    "scikit-learn>=1.4",       # TF-IDF keyword extraction + cosine similarity (Phase 2)

    # Web UI
    "markdown==3.6",
    "fastapi==0.134.0",
    "python-multipart>=0.0.29",  # 0.0.9 had 4 DoS CVEs
    "uvicorn==0.41.0",
    "jinja2==3.1.6",
]

[project.optional-dependencies]
media = [
    "youtube-transcript-api>=0.6.3",  # YouTube transcript fetching
    "yt-dlp>=2024.1.0",               # YouTube metadata: title, description, chapters
]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.4",
    "mypy==1.16.0",
]

[project.scripts]
mymem = "mymem.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
