[project]
name = "mymem"
version = "0.1.0"
description = "Personal Knowledge Management System"
authors = [{name = "Developer", email = "dev@example.com"}]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "anthropic>=0.20.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pypdf>=4.0.0",
    "rank-bm25>=0.2.2",
    "fastapi>=0.100.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.25.0",
    "matplotlib>=3.8.0",
]

[project.optional.dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[tool.tool.scripts]
mymem = "mymem.cli:app"